shared/iac/mithings-shared/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Redis_mithings_name": {
            "defaultValue": "mithings",
            "type": "String"
        },
        "loadBalancers_lb_main_name": {
            "defaultValue": "lb-main",
            "type": "String"
        },
        "networkSecurityGroups_mithings_nsg_name": {
            "defaultValue": "mithings-nsg",
            "type": "String"
        },
        "publicIPAddresses_app_gatway_name": {
            "defaultValue": "app-gatway",
            "type": "String"
        },
        "publicIPAddresses_mithings_ip_name": {
            "defaultValue": "mithings-ip",
            "type": "String"
        },
        "virtualNetworks_mithings_app_backend_name": {
            "defaultValue": "mithings-app-backend",
            "type": "String"
        },
        "virtualNetworks_mithings_app_frontend_name": {
            "defaultValue": "mithings-app-frontend",
            "type": "String"
        },
        "loadBalancers_lb_main_id": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_lb_main_id_1": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/backendAddressPools/app-pool",
            "type": "String"
        },
        "loadBalancers_lb_main_id_2": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/probes/probe-backend-dev",
            "type": "String"
        },
        "loadBalancers_lb_main_id_3": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_lb_main_id_4": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/backendAddressPools/app-pool",
            "type": "String"
        },
        "loadBalancers_lb_main_id_5": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/probes/probe-backend-prod",
            "type": "String"
        },
        "loadBalancers_lb_main_id_6": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_lb_main_id_7": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/backendAddressPools/app-pool",
            "type": "String"
        },
        "loadBalancers_lb_main_id_8": {
            "defaultValue": "/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main/probes/probe-frontend",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Cache/Redis/mithings'.",
            "type": "Microsoft.Cache/Redis",
            "name": "[parameters('Redis_mithings_name')]",
            "apiVersion": "2016-04-01",
            "location": "East US",
            "tags": {},
            "properties": {
                "redisVersion": "3.0",
                "sku": {
                    "name": "Basic",
                    "family": "C",
                    "capacity": 0
                },
                "enableNonSslPort": true,
                "redisConfiguration": {
                    "maxclients": "256",
                    "maxmemory-reserved": "2",
                    "maxmemory-policy": "volatile-lru",
                    "maxmemory-delta": "2"
                }
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/loadBalancers/lb-main'.",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[parameters('loadBalancers_lb_main_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mithings_ip_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "app-pool"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "balance-backend-dev",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_lb_main_id')]"
                            },
                            "frontendPort": 38898,
                            "backendPort": 38898,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_lb_main_id_1')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_lb_main_id_2')]"
                            }
                        }
                    },
                    {
                        "name": "balance-backend-prod",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_lb_main_id_3')]"
                            },
                            "frontendPort": 38899,
                            "backendPort": 38899,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_lb_main_id_4')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_lb_main_id_5')]"
                            }
                        }
                    },
                    {
                        "name": "balance-web",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_lb_main_id_6')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_lb_main_id_7')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_lb_main_id_8')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "probe-backend-dev",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 38898,
                            "intervalInSeconds": 60,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "probe-backend-prod",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 38899,
                            "intervalInSeconds": 60,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "probe-frontend",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "inboundNatRules": [],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mithings_ip_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/networkSecurityGroups/mithings-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_mithings_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "securityRules": [
                    {
                        "name": "udp-500-rancher",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "500",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "udp-4500-rancher",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4500",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-dev-hub",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "38898",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-web-app",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-prod-hub",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "38899",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1050,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/publicIPAddresses/app-gatway'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_app_gatway_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/publicIPAddresses/mithings-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_mithings_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "mithings"
                }
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/virtualNetworks/mithings-app-backend'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_mithings_app_backend_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('virtualNetworks_mithings_app_backend_name')]",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24"
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/d1f3a4fa-eb55-4b4c-9c6e-10948f4c5122/resourceGroups/mithings-shared/providers/Microsoft.Network/virtualNetworks/mithings-app-frontend'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_mithings_app_frontend_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.2.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('virtualNetworks_mithings_app_frontend_name')]",
                        "properties": {
                            "addressPrefix": "10.2.0.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        }
    ]
}
